Pull request #71: CPDI 1.2 link styling bug to fix
Merge in NRCSAPPS/cpdifrontend from story/fix-bugs to develop

Squashed commit of the following:

commit 823ed02fce8f28a083c327f220af7b6449b349e6
Author: Peyman Ardekani <peyman.ardekani@spatialfront.com>
Date:   Fri Feb 9 13:33:34 2024 -0500

    CPDI 1.2 link styling bug to fix

--- a/src/components/CPPESoreLegend/CPPEScoreLegend.scss
+++ b/src/components/CPPESoreLegend/CPPEScoreLegend.scss
@@ -30,7 +30,7 @@
 
     a {font-size: 20px;
         font-weight: 900;
-        color: #779fbd;
+        color: #0068AD;
     }  
   }
 
