--- a/src/components/NextSteps/next-steps.scss
+++ b/src/components/NextSteps/next-steps.scss
@@ -49,7 +49,7 @@ img {
   }
 
   a:first-of-type {
-    color: $link-color;
+    color: #0068AD;
     font-weight: bold;
     img {
       margin: 0rem 0rem 0.2rem 0.5rem;
