--- a/src/components/ProjectListGroup/project-list-group.scss
+++ b/src/components/ProjectListGroup/project-list-group.scss
@@ -69,7 +69,7 @@
     .link-text {
       float: right;
       a {    
-       color: #005ea2;
+       color: #0068AD;
       }
     }
     
