--- a/src/components/ProjectTypeSection/project-type.scss
+++ b/src/components/ProjectTypeSection/project-type.scss
@@ -15,3 +15,6 @@
 .map {
   height: 690px;
 }
+a {
+  color: #0068AD;
+} 
